--- a/package.json
+++ b/package.json
@@ -1,8 +1,77 @@
 {
-  "name": "ssp-proj",
-  "version": "1.0.0",
-  "description": "practical class work",
+  "name": "ssp-ca-repeat",
+  "version": "0.0.1",
+  "description": "Server Side Programming CA Repeat",
   "main": "index.js",
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "array-flatten": "^1.1.1",
+    "body-parser": "^1.20.0",
+    "bytes": "^3.1.2",
+    "content-disposition": "^0.5.4",
+    "call-bind": "^1.0.2",
+    "content-type": "^1.0.4",
+    "cookie": "^0.5.0",
+    "debug": "^2.6.9",
+    "depd": "^2.0.0",
+    "cookie-signature": "^1.0.6",
+    "destroy": "^1.2.0",
+    "ee-first": "^1.1.1",
+    "escape-html": "^1.0.3",
+    "express": "^4.18.1",
+    "etag": "^1.8.1",
+    "finalhandler": "^1.2.0",
+    "encodeurl": "^1.0.2",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs": "^0.0.1-security",
+    "get-intrinsic": "^1.1.2",
+    "function-bind": "^1.1.1",
+    "has": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "he": "^1.2.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "inherits": "^2.0.4",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "http": "^0.0.1-security",
+    "ipaddr.js": "^1.9.1",
+    "methods": "^1.1.2",
+    "mime-types": "^2.1.35",
+    "mime": "^1.6.0",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "mime-db": "^1.52.0",
+    "object-inspect": "^1.12.2",
+    "on-finished": "^2.4.1",
+    "path": "^0.12.7",
+    "path-to-regexp": "^0.1.7",
+    "process": "^0.11.10",
+    "proxy-addr": "^2.0.7",
+    "parseurl": "^1.3.3",
+    "qs": "^6.10.3",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "sax": "^1.2.4",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "statuses": "^2.0.1",
+    "send": "^0.18.0",
+    "toidentifier": "^1.0.1",
+    "type-is": "^1.6.18",
+    "util": "^0.10.4",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "xml2js": "^0.4.23",
+    "unpipe": "^1.0.0",
+    "xmlbuilder": "^11.0.1",
+    "xslt-processor": "^0.11.5"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,13 +84,5 @@
   "bugs": {
     "url": "https://github.com/k773352/SSP_CA_repeat/issues"
   },
-  "homepage": "https://github.com/k773352/SSP_CA_repeat#readme",
-  "dependencies": {
-    "express": "^4.18.1",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "path": "^0.12.7",
-    "xml2js": "^0.4.23",
-    "xslt-processor": "^0.11.5"
-  }
+  "homepage": "https://github.com/k773352/SSP_CA_repeat#readme"
 }
